Correct styling of the remarks field_visible_to

--- a/web/themes/custom/kemke/digigov/drupal-overrides.css
+++ b/web/themes/custom/kemke/digigov/drupal-overrides.css
@@ -101,7 +101,7 @@
 .incoming-remarks-field.field-comment {
   width: 100%;
 }
-div.visible-to-amke {
+div.incoming-remarks-field.visible-to-amke {
   font-weight: bold;
   font-size: 120%;
 }
